--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -2,6 +2,7 @@ eclipse.preferences.version=1
 encoding//WebContent/ejemplos/formularios/controlador_dp.jsp=UTF-8
 encoding//WebContent/ejemplos/formularios/datos_personales.jsp=UTF-8
 encoding//WebContent/ejemplos/javascript/basicos/variables.jsp=UTF-8
+encoding//WebContent/ejemplos/javascript/tests/test.jsp=UTF-8
 encoding/<project>=UTF-8
 encoding/WebContent=UTF-8
 separateDerivedEncodings=true
